package my_demo.decorator.demo1.component;

/**
 * <p> 抽象组件 </p>
 *
 * <pre>
 * @author wuxiongbo
 * @date 2021/12/22
 * </pre>
 */
public abstract class BaseComponent {

    /**
     * 操作
     */
    public abstract void operation();

}
